[gd_scene load_steps=3 format=2]

[ext_resource path="res://source/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/compter_screen.png" type="Texture" id=2]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="."]
margin_left = 850.592
margin_top = 297.73
margin_right = 1087.59
margin_bottom = 317.73
text = "Start game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGame" type="Button" parent="."]
margin_left = 850.592
margin_top = 368.73
margin_right = 1087.59
margin_bottom = 388.73
text = "Quit game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 876.408
margin_top = 448.348
margin_right = 1076.41
margin_bottom = 488.348
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="VBoxContainer"]
margin_right = 200.0
margin_bottom = 16.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartGame" to="." method="_on_StartGame_pressed"]
[connection signal="pressed" from="QuitGame" to="." method="_on_QuitGame_pressed"]
[connection signal="value_changed" from="VBoxContainer/HSlider" to="." method="_on_HSlider_value_changed"]
